<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer</string>
    <string name="email_name">kav@hel-bel.ru</string>
    <string name="email_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="renew">Обновить</string>
    <string name="your_history_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="default_time">00:00</string>
    <string name="favorite_track_empty">Ваша медиатека пуста</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>
    <string name="create_playlist">Создать</string>

    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <string name="confirm_playlist_title">Завершить создание плейлиста?</string>
    <string name="confirm_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="confirm_playlist_finish">Завершить</string>
    <string name="confirm_playlist_cancel">Отмена</string>
    <string name="create_playlist_done">Плейлист %1$s создан</string>
    <string name="create_playlist_error">Плейлист с именем %1$s уже существует</string>
    <string name="playlist_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_exists_in_playlist">Трек уже добавлен в плейлист  %1$s</string>
    <string name="playlist_num_tracks">%1$d %2$s</string>

    <string name="delete_track_from_playlist_message">Хотите удалить трек?</string>
    <string name="delete_track_from_playlist_title">Удалить трек</string>
    <string name="delete_track_from_playlist_confirm">Удалить</string>

    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="delete_playlist_message">Хотите удалить плейлист "%1$s"?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

</resources>