<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:theme="@style/SettingsTheme.Theme.PlaylistMaker"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.settings.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/medium_padding"
        tools:ignore="RtlSymmetry,UseCompoundDrawables,UselessParent">

        <TextView
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/medium_padding"
        android:paddingTop="24dp">

        <androidx.appcompat.widget.SwitchCompat
            style="@style/DarkThemeSwitchTextColor"
            android:id="@+id/switch_night_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttons_height"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/dark_theme"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_middle"
            android:theme="@style/DarkThemeSwitchCheckedColor" />

        <Button
            android:id="@+id/btn_share_app"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttons_height"

            android:text="@string/share_app"
            app:icon="@drawable/ic_share_app" />

        <Button
            android:id="@+id/btn_send_to_support"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttons_height"
            android:text="@string/write_support"
            app:icon="@drawable/support" />

        <Button
            android:id="@+id/btn_license_agreement"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttons_height"
            android:text="@string/user_agreement"
            app:icon="@drawable/arrow_forward"
            app:iconSize="24dp"
             />

    </LinearLayout>

</LinearLayout>