<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/medium_padding"
    android:paddingTop="14dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/main_buttons_radius"
        android:insetTop= "0dp"
        android:insetBottom= "0dp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icons_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/main_buttons_text_size"/>

    <Button
        android:id="@+id/btn_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/main_buttons_margin_top"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/main_buttons_radius"
        android:insetTop= "0dp"
        android:insetBottom= "0dp"
        app:icon="@drawable/media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icons_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"
        android:text="@string/media"
        android:textColor="@color/black"
        android:textSize="@dimen/main_buttons_text_size">
    </Button>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/main_buttons_margin_top"
        android:backgroundTint="@color/white"
        app:cornerRadius="@dimen/main_buttons_radius"
        android:insetTop= "0dp"
        android:insetBottom= "0dp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icons_padding"
        app:iconTint="@color/black"
        android:textAllCaps="false"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/main_buttons_text_size" />

</LinearLayout>