<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="14dp"
        android:orientation="horizontal"
        tools:ignore="RtlSymmetry,UselessParent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/arrow_left"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/medium_padding"
        android:paddingTop="40dp" >

        <Switch
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/share_app"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:icon="@drawable/share_app"
            app:iconGravity="end"
            app:iconTint="@color/grey"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/write_support"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:icon="@drawable/support"
            app:iconGravity="end"
            app:iconTint="@color/grey"
            tools:ignore="RtlSymmetry" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:backgroundTint="@color/white"
            android:fontFamily="sans-serif-medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingStart="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/user_agreement"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:icon="@drawable/bracket_right"
            app:iconGravity="end"
            app:iconTint="@color/grey"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>