<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:theme="@style/SearchTheme.Theme.PlaylistMaker"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.search.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/medium_padding"
        tools:ignore="RtlSymmetry,UseCompoundDrawables,UselessParent">


        <TextView
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/medium_padding"
        android:paddingVertical="8dp">


        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:drawableStart="@drawable/search_for_search_activity"
            android:drawablePadding="9dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_medium"
            android:freezesText="true"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="13dp"
            android:paddingEnd="30dp"
            android:singleLine="true"
            android:textFontWeight="400"
            android:textSize="@dimen/text_size_middle"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/btn_clear"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/cross"
            android:background="@null"
            android:textSize="20sp"
            android:visibility="gone" />
    </FrameLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/medium_padding"
        android:visibility="visible">

        <TextView
            android:id="@+id/history_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="26dp"
            android:paddingBottom="20dp"
            android:text="@string/your_history_search"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_big"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/track_item" />

        <Button
            android:id="@+id/btn_clear_history"
            style="@style/new_playlist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:text="@string/clear_history" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_placeholder"
            android:layout_width="@dimen/placeholder_error_size"
            android:layout_height="@dimen/placeholder_error_size"
            android:layout_gravity="center_horizontal"
            tools:src="@drawable/no_internet_placeholder" />

        <TextView
            android:id="@+id/text_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"
            android:textFontWeight="400"
            android:textSize="19sp"
            tools:text="@string/no_internet" />

        <Button
            android:id="@+id/btn_renew_placeholder"
            style="@style/new_playlist_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/renew" />

    </LinearLayout>


</LinearLayout>